// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`media 1`] = `
Object {
  "@media print": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(34, 197, 94, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`media 2`] = `
Object {
  "@media (min-width: 1000px) and (max-width: 2000px)": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(34, 197, 94, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`useMedia 1`] = `
Object {
  "@media print": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`useMedia 2`] = `
Object {
  "@media (min-width: 1000px) and (max-width: 2000px)": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`useVariant 1`] = `
Object {
  "span": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`useVariant 2`] = `
Object {
  "&:hover": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`variant 1`] = `
Object {
  "span": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(34, 197, 94, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`variant 2`] = `
Object {
  "&:hover": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(34, 197, 94, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;
